# BeastServer

./: .gitignore  CONTRIBUTING.md  README.md
beastserver/: .gitignore  CMakeLists.txt  conanfile.txt  configure.sh  docker-compose.yml
beastserver/cmake/: BeastPaths.cmake  BeastPlugin.cmake  ConanDeps.cmake
beastserver/config/: example.json
beastserver/gameplays/: CMakeLists.txt
beastserver/gameplays/board/riichi4p/: CMakeLists.txt  routes.cpp
beastserver/gameplays/board/riichi4p/engine/: riichi4p_engine.cpp  riichi4p_engine.hpp
beastserver/gameplays/board/riichi4p/register4ai/: actions.hpp  register.hpp
beastserver/gameplays/example/: CMakeLists.txt
beastserver/gameplays/example/demo_ai/: CMakeLists.txt  plugin.cpp
beastserver/gameplays/example/demo_ai/engine/: demo_ai_engine.cpp  demo_ai_engine.hpp
beastserver/gameplays/example/demo_ai/register4ai/: hunt_receipt.hpp  receipts.cpp
beastserver/gameplays/example/demo_ai2/: CMakeLists.txt  plugin.cpp  routes.cpp
beastserver/gameplays/example/demo_ai2/engine/: demo_ai2_engine.cpp  demo_ai2_engine.hpp
beastserver/gameplays/example/demo_ai2/register4ai/: actions.hpp  decisions.hpp  register.hpp
beastserver/gameplays/example/demo_event/: plugin.cpp
beastserver/gameplays/example/demo_event/engine/: demo_event_engine.cpp  demo_event_engine.hpp
beastserver/gameplays/example/demo_hotlua/: CMakeLists.txt  plugin.cpp
beastserver/gameplays/example/demo_hotlua/engine/: hotlua_engine.cpp  (+1 more)
beastserver/gameplays/example/demo_tick/: CMakeLists.txt
beastserver/gameplays/example/sdk_event/: CMakeLists.txt  plugin.cpp
beastserver/gameplays/example/stress_event/: CMakeLists.txt  plugin.cpp
beastserver/gameplays/example/stress_tick/: CMakeLists.txt  plugin.cpp
beastserver/gameplays/moba/: CMakeLists.txt
beastserver/gameplays/moba/pixelmoba/: biz_tables.hpp  plugin.cpp  routes.hpp
beastserver/platform/: CMakeLists.txt
beastserver/platform/ai/: CMakeLists.txt
beastserver/platform/ai/proto/: ai_event.proto
beastserver/platform/ai/src/: ai_config.cpp
beastserver/platform/ai/tests/: ai_embed_test.cpp  ai_service_test.cpp
beastserver/platform/bizutil/: CMakeLists.txt
beastserver/platform/bizutil/tests/: biz_config_store_test.cpp  math_clamp_test.cpp
beastserver/platform/core/: CMakeLists.txt
beastserver/platform/core/src/: id_generator.cpp  time.cpp
beastserver/platform/core/tests/: config_test.cpp  id_generator_test.cpp
beastserver/platform/dirtypersist/: CMakeLists.txt
beastserver/platform/dirtypersist/src/: dirty_persist_config.cpp  dirty_persist_service.cpp  dirty_tracker.cpp  flush_scheduler.cpp  mysql_backend.cpp
beastserver/platform/dirtypersist/tests/: dirty_tracker_test.cpp  entity_traits_test.cpp
beastserver/platform/discovery/: CMakeLists.txt
beastserver/platform/discovery/src/: etcd_client.cpp  etcd_monitor.cpp  load_monitor.cpp  service_record.cpp  service_registry.cpp
beastserver/platform/engine/: CMakeLists.txt
beastserver/platform/engine/tests/: engine_context_test.cpp  event_carrier_test.cpp  instance_event_bridge_test.cpp  instance_manager_test.cpp  loop_carrier_test.cpp  player_instance_registry_test.cpp  plugin_host_test.cpp  server_context_test.cpp  timer_service_test.cpp  timer_wheel_test.cpp
beastserver/platform/net/: CMakeLists.txt
beastserver/platform/net/tests/: auth_verifier_test.cpp  channel_pipeline_test.cpp  dtls_loopback_test.cpp  kcp_bypass_crypto_loopback_test.cpp  kcp_crypto_loopback_test.cpp  kcp_crypto_test.cpp  kcp_loopback_test.cpp  length_field_codec_test.cpp  outbound_hub_test.cpp  protobuf_codec_test.cpp  session_instance_test.cpp  session_manager_concurrent_test.cpp  ssl_loopback_test.cpp  tcp_loopback_test.cpp  unreliable_frame_test.cpp  websocket_loopback_test.cpp  websocket_tls_loopback_test.cpp
beastserver/platform/rpc/: CMakeLists.txt
beastserver/platform/rpc/src/: grpc_server.cpp
beastserver/platform/rpc/tests/: grpc_server_test.cpp
beastserver/platform/server/: CMakeLists.txt
beastserver/platform/server/src/: game_server.cpp  room_service.cpp  room_service_grpc.cpp
beastserver/platform/server/tests/: demo_event_room_integration_test.cpp  game_server_test.cpp  room_service_test.cpp
beastserver/plugins/: CMakeLists.txt
beastserver/plugins/ai/: CMakeLists.txt  plugin.cpp
beastserver/plugins/ai/proto/: ai_event.proto
beastserver/plugins/ai/src/: ai_config.cpp  ai_event_dispatch.cpp  ai_tool_dispatch.cpp  ai_tool_registry.cpp  engine_ai_decisions.cpp  engine_ai_declarative.cpp  engine_ai_events.cpp  engine_ai_host.cpp  instance_ai_facade.cpp
beastserver/plugins/ai/tests/: ai_embed_test.cpp  ai_service_test.cpp  instance_dispatch_integration_test.cpp
beastserver/plugins/cmake/: BeastPlugin.cmake
beastserver/plugins/dirtypersist/: CMakeLists.txt  plugin.cpp
beastserver/plugins/dirtypersist/src/: dirty_persist_config.cpp  dirty_persist_service.cpp  dirty_tracker.cpp  flush_scheduler.cpp  mysql_backend.cpp
beastserver/plugins/dirtypersist/tests/: dirty_tracker_test.cpp  entity_traits_test.cpp
beastserver/plugins/game/: CMakeLists.txt
beastserver/plugins/game/board/: CMakeLists.txt
beastserver/plugins/game/example/: CMakeLists.txt
beastserver/plugins/hotlua/: CMakeLists.txt  plugin.cpp
beastserver/plugins/hotlua/src/: hotlua_broker.cpp  lua_bindings.cpp  lua_vm.cpp  lua_vm_service.cpp
beastserver/plugins/hotlua/tests/: lua_vm_test.cpp
beastserver/plugins/tests/: CMakeLists.txt  route_handler_test.cpp
beastserver/proto/: auth.proto  envelope.proto
beastserver/scripts/ca/: init_ca.sh  issue_server_cert.sh
beastserver/src/: main.cpp
sdk/native/: .gitignore  CMakeLists.txt  README.md
sdk/native/bindings/c_api/: beast_client_c.cpp  beast_client_c.h
sdk/native/bindings/godot/: CMakeLists.txt
sdk/native/core/src/: client.cpp  frame_codec.cpp  io_service.cpp  message_codec.cpp  tcp_transport.cpp  wire_codec.cpp
sdk/native/tests/: event_queue_test.cpp  frame_codec_test.cpp  message_codec_test.cpp  test_main.hpp
sdk/native/tools/: build_godot_extension.ps1  setup_godot_cpp.ps1
(+735 files in other folders)
